--- a/index.html
+++ b/index.html
@@ -388,9 +388,7 @@ li:hover > a {
             <h1>Math Formulas</h1><br><br>
                 <p>Math formulas are expressions that have been created after several decades of research that help to solve questions quickly. It is easy to perform simple arithmetic calculations such as addition, subtraction, and so on. However, when it comes to algebraic expressions, geometry, and other topics you need mathematical formulas to simplify the process of reaching the answer and saving time in the process.</p><br>
 
-<p>Use these formulas to solve problems creatively and you will automatically see an improvement in your mathematical skills. Hence, you can easily find formulas that need to be revised or require to be referenced.</p><br>
-
-<p>The links to the math formulas available on different topics have been arranged for your convenience. So pick a topic and start learning! 😊</p>
+<p>Use these formulas to solve problems creatively and see yourself improve. The links to the math formulas available on different topics have been arranged for your convenience. So pick a topic and start learning! 😊</p>
 
             </div>
           </div>
