--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> Formulary | Home </title>
+    <meta name="google-site-verification" content="g-wh4ogtD86bUAIkb0fmqwz0A28kHt8HWoKupZr4A2g" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/My Projects/Formulary/images/GUD.png" type="image/png">
